# ktkbot

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.org
src/: args.rs  event.rs  lib.rs  log.rs  main.rs  notification.rs  validate.rs
src/args/: argument.rs  mod.rs  validate.rs
src/event/: fetch.rs  mod.rs  parse.rs
src/notification/: mod.rs  pushover_key.rs
