[package]
name = "ktkbot"
version = "0.4.0"
authors = ["mestru17"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
scraper = "0.12.0"
select = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
