[package]
name = "ktkbot"
version = "0.9.1"
authors = ["mestru17"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "cookies"] }
scraper = "0.12.0"
select = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.14"
flexi_logger = "0.18.0"
chrono = { version = "0.4.19", features = ["serde"] }
